More detail added.

--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
 </head>
 <body>
   <header>
-    <h1>Katie</h1>
+    <h1>digitalbyKH</h1>
+    <p class="tagline">Engineer looking for a career in networking and cyber security!<br>
+      Currently working towards my CC with ISC2 One Million Certified in Cyber Security Scheme and CompTIA Network+ & Security+.<br>
+      My background is in wireless communications, digital signals processing, antenna design and network engineering.
+      I currently work as a software developer in the aerospace industry.
+    </p>
     <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-    </nav>
+      <div class="dropdown">
+        <button class="dropbtn">Projects</button>
+        <div class="dropdown-content">
+          <a href="#configuring-a-VM-network">Configuring a VM network</a>
+        </div>
+      </div>
+</nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Currently a software developer working on space exploration rover projects.
-        I come from a hardware background in wireless communications, digital signals processing, antenna design and network engineering.
-        Looking to move into the world of networking and cyber security!</p>
-  </section>
-
   <section id="projects">
-    <h2>Projects</h2>
     <div class="project">
       <h3>Configuring a VM Network</h3>
       <p>Basic configuration of a network consisting of 3 Virtual Machines.</p>
-      <a href="https://github.com/digitalbyKH/configuring-a-VM-network">GitHub Repo</a>
+      <a href="https://github.com/digitalbyKH/configuring-a-VM-network">Link to Repo</a>
     </div>
     <!-- Repeat for more projects -->
   </section>
 
   <footer>
-    <p>© 2025 Katie</p>
+    <p>© 2025 digitalbyKH</p>
   </footer>
 </body>
 </html>
